# rebel-wallet

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  rmp.toml
.githooks/: pre-commit
ci_scripts/: ci_post_clone.sh
crates/rebel-wallet-cli/: Cargo.toml
crates/rebel-wallet-cli/src/: main.rs
docs/: rmp-architecture-divergence.md
ios/: Info.plist  project.yml
ios/App.xcodeproj/: project.pbxproj
ios/App.xcodeproj/xcshareddata/xcschemes/: App.xcscheme
ios/Bindings/: rebel_wallet_core.swift  rebel_wallet_coreFFI.h
ios/Frameworks/RebelWalletCore.xcframework/: Info.plist
ios/Frameworks/RebelWalletCore.xcframework/ios-arm64-simulator/Headers/: module.modulemap  rebel_wallet_coreFFI.h
ios/Sources/: App.swift  AppManager.swift  ContentView.swift  DisplayText.swift  Haptics.swift  RebelTheme.swift  WalletEasterEgg.swift
ios/Sources/Assets.xcassets/MegaCheck.imageset/: Contents.json
ios/Sources/Assets.xcassets/RebelMark.imageset/: Contents.json
ios/Sources/Capabilities/: QRScanner.swift
ios/Sources/Components/: ButtonStyles.swift  CommonComponents.swift  QRCodeView.swift
ios/Sources/Services/: ProfileImageLoader.swift
ios/Sources/Utilities/: UIKitPresentation.swift
ios/Sources/Views/: ActivityView.swift  BackupRestoreViews.swift  ContactDetailView.swift  ContactsView.swift  LaunchSplashView.swift  LightningAddressView.swift  MainWalletView.swift  ProfileView.swift  ReceiveView.swift  SendView.swift  SettingsView.swift  SetupView.swift
ios/ci_scripts/: ci_post_clone.sh
rebel-wallet-core/: Cargo.toml
rebel-wallet-core/src/: actions.rs  activity.rs  core.rs  custom_address.rs  lib.rs  nostr_support.rs  payments.rs  persistence.rs  profile_cache.rs  state.rs  updates.rs  wallet.rs  zaps.rs
rebel-wallet-core/src/core/: custom_address_flow.rs  mod.rs  profile_prefetch.rs  send_flow.rs  wallet_lifecycle.rs
rebel-wallet-core/src/state/: send.rs
rust/: Cargo.toml  uniffi.toml
rust/src/: actions.rs  activity.rs  lib.rs  nostr_support.rs  payments.rs  persistence.rs  price.rs  profile_cache.rs  state.rs  time.rs  updates.rs  wallet.rs  zaps.rs
rust/src/core/: mod.rs
