[package]
name = "rebel-wallet_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
bark = { package = "bark-wallet", git = "https://gitlab.com/ark-bitcoin/bark.git", rev = "38f79ffefa057d6323662a22dff5d074a1ac7447", default-features = false, features = ["sqlite-bundled", "native", "tls-webpki-roots", "rand"] }
bech32 = "0.11"
bip39 = { version = "2", features = ["rand"] }
bitcoin = "0.32"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flume = "0.11"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
lightning-invoice = "0.33"
nostr = { version = "0.45.0-alpha.1", features = ["nip04"] }
nostr-sdk = "0.45.0-alpha.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots"] }
rusqlite = { version = "0.31" }
secp256k1 = { version = "0.29", features = ["rand-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
uniffi = "0.31.0"

[dev-dependencies]
tempfile = "3"
